# aithena

./: .bandit  .checkov.yml  .dockerignore  .env.example  .env.prod.example  .gitignore  .zizmor.yml  CHANGELOG.md  README.md  aithena-ui-smoke-console.txt  aithena-ui-smoke-network.txt  aithena-ui-smoke-results.md  aithena-ui-snapshot.md  buildall.sh  docker-compose.e2e.yml  docker-compose.intel.override.yml  docker-compose.nosasl.yml  docker-compose.nvidia.override.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.squad/: .first-run  .ralph-state.json  ceremonies.md  config.json  created-issues-summary.md  decisions-archive.md  decisions.md  milestone-plans.md  quality-gates.md  routing.md  security-triage-report.md  team.md
admin/: Dockerfile  README.md  pyproject.toml
admin/src/: main.py  requirements.txt
admin/src/pages/: document_lister.py
admin/src/pages/shared/: config.py
aithena-ui/: Dockerfile  index.css  index.html  package-lock.json  package.json  vite.config.ts
docker/: Dockerfile.llama  compose.dev-ports.yml  compose.e2e.yml  compose.gpu-intel.yml  compose.gpu-nvidia.yml  compose.prod.yml  compose.single-node.yml  compose.ssl.yml  solr-init.sh
docs/: admin-manual.md  deployment-topologies.md  design-system.md  frontend-performance-best-practices.md  hardware-requirements.md  i18n-guide.md  migration-e5.md  observability-runbook.md  pre-release-testing.md  quickstart.md  release-notes-v0.10.0.md  release-notes-v0.11.0.md  release-notes-v1.0.0.md  release-notes-v1.0.1.md  release-notes-v1.1.0.md  release-notes-v1.2.0.md  release-notes-v1.3.0.md  release-notes-v1.4.0.md  release-notes-v1.5.0.md  release-notes-v1.6.0.md  release-notes-v1.7.0.md  release-pipeline.md  solr10-migration-prd.md  test-report-v0.10.0.md  test-report-v0.11.0.md  test-report-v0.12.0.md  test-report-v0.4.0.md  test-report-v0.5.0.md  test-report-v0.6.0.md  test-report-v0.7.0.md  test-report-v1.0.0.md  test-report-v1.2.0.md  test-report-v1.4.0.md  test-report-v1.7.0.md  (+3 more)
document-indexer/: Dockerfile  main.py  pyproject.toml  requirements.txt
document-indexer/document_indexer/: __init__.py  __main__.py  chunker.py  embeddings.py  metadata.py
document-indexer/document_indexer/blob_storage/: __init__.py
document-indexer/tests/: conftest.py  test_chunker.py  test_indexer.py  test_metadata.py
document-lister/: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
document-lister/document_lister/: __init__.py  __main__.py
document-lister/document_lister/blob_storage/: __init__.py
document-lister/tests/: test_document_lister.py
installer/: __init__.py  __main__.py  install-offline.sh  pyproject.toml  setup.py  setupdev.sh  verify.sh
installer/tests/: conftest.py  test_solr_credentials.py
solr-search/: Dockerfile  README.md  auth.py  config.py  main.py  pyproject.toml  requirements.txt  search_service.py
solr-search/config/: __init__.py
solr-search/tests/: conftest.py  test_admin_documents.py  test_admin_queue.py  test_auth.py  test_integration.py  test_metrics.py  test_search.py  test_search_service.py  test_setup_installer.py  test_similar.py  test_upload.py
src/admin/: Dockerfile  README.md  pyproject.toml
src/admin/src/: auth.py  login_page.py  main.py  requirements.txt
src/admin/src/pages/: dashboard.py  document_lister.py  indexing_status.py  infrastructure.py  log_viewer.py  reindex.py  system_status.py
src/admin/src/pages/shared/: config.py
src/admin/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_indexing_status.py  test_log_viewer.py
src/document-indexer/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
src/document-indexer/document_indexer/: __init__.py  __main__.py  chunker.py  control.py  embeddings.py  logging_config.py  metadata.py  thumbnail.py
src/document-indexer/tests/: conftest.py  test_chunker.py  test_control.py  test_indexer.py  test_metadata.py  test_metadata_override.py  test_thumbnail.py
src/document-lister/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
src/document-lister/document_lister/: __init__.py  __main__.py
src/document-lister/document_lister/blob_storage/: __init__.py
src/document-lister/tests/: test_document_lister.py
src/embeddings-server/: Dockerfile  main.py  model_utils.py  pyproject.toml  quantization.py  requirements.txt
src/embeddings-server/config/: __init__.py
src/embeddings-server/tests/: test_embeddings_server.py  test_gpu_config.py  test_openvino_deps.py  test_quantization.py
src/solr-search/: .dockerignore  Dockerfile  README.md  admin_auth.py  auth.py  backup_service.py  circuit_breaker.py  collections_models.py  collections_service.py  config.py  correlation.py  entrypoint.sh  logging_config.py  main.py  metrics.py  password_policy.py  perf_metrics.py  pyproject.toml  requirements.txt  rerank_service.py  reset_password.py  search_service.py  solr_compat.py  utils.py
src/solr-search/migrations/: 001_collections_init.py  __init__.py  template.py
src/solr-search/scripts/: backup_auth_db.sh
src/solr-search/tests/: auth_helpers.py  conftest.py  test_admin_api.py  test_admin_auth.py  test_admin_documents.py  test_admin_seeding.py  test_ascii_folding.py  test_auth.py  test_auth_integration.py  test_backup_service.py  test_batch_metadata_edit.py  test_book_detail.py  test_books.py  test_change_password.py  test_chunk_id_handling.py  test_circuit_breaker.py  test_collection_parameter.py  test_collections.py  test_collections_security.py  test_compare.py  test_correlation.py  test_integration.py  test_logging_config.py  test_metadata_edit.py  test_metadata_edit_security.py  test_metadata_editing.py  test_metrics.py  test_migrations.py  test_nginx_limits.py  test_password_policy.py  test_perf_metrics.py  test_rate_limiting.py  test_rbac.py  test_reindex.py  test_rerank_service.py  test_reset_password.py  test_search_architecture.py  test_search_enrichment.py  test_search_service.py  test_setup_installer.py  (+5 more)
(+1208 files in other folders)
