[project]
name = "aithena-admin"
version = "0.1.0"
description = "Aithena Admin Dashboard — Streamlit-based operations UI for the document indexing pipeline"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.37.0",
    "redis==4.6.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
]

[tool.uv]
package = false
