[project]
name = "aithena-admin"
version = "0.1.0"
description = "Aithena Admin Dashboard — Streamlit-based operations UI for the document indexing pipeline"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.51.0,<2",
    "redis==4.6.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "pandas==2.2.2",
    "pillow>=12.1.1",
]

[tool.uv]
package = false
