[project]
name = "document-indexer"
version = "0.1.0"
description = "Document indexer service for Aithena"
requires-python = ">=3.11"
dependencies = [
    "pika==1.3.2",
    "redis==4.6.0",
    "pdfplumber==0.10.0",
    "requests==2.32.4",
    "retry==0.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
