[project]
name = "document-lister"
version = "0.1.0"
description = "Scans the local document library and enqueues PDFs for indexing."
requires-python = ">=3.11"
dependencies = [
    "pika==1.3.2",
    "redis==4.6.0",
    "retry==0.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
