[project]
name = "document-lister"
version = "0.1.0"
description = "Scan the local document library and enqueue PDFs for indexing."
requires-python = ">=3.11"
dependencies = [
    "pika==1.3.2",
    "retry==0.9.2",
    "redis==4.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

