[project]
name = "solr-search"
version = "0.1.0"
description = "Solr-backed FastAPI search service for aithena"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]==0.99.1",
    "uvicorn[standard]==0.23.1",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx<0.28",
]
