[project]
name = "aithena-admin"
version = "0.1.0"
description = "Aithena Admin Dashboard"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.51.0,<2",
    "redis==7.4.0",
    "python-dotenv==1.2.2",
    "requests>=2.31.0",
    "pandas==3.0.2",
    "pillow>=12.1.1",
    "pyjwt>=2.10.0",
    "python-json-logger>=4.0.0",
    "docker>=7.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html -ra"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "__pycache__/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "^if __name__ == ['\"]__main__['\"]:$",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
