[project]
name = "document-indexer"
version = "0.1.0"
description = "Document indexer service for Aithena"
requires-python = ">=3.11"
dependencies = [
    "pika==1.3.2",
    "redis==4.6.0",
    "pdfplumber>=0.11.9,<1",
    "requests==2.32.4",
    "retry==0.9.2",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=document_indexer --cov-report=term-missing --cov-report=html -ra"

[tool.coverage.run]
source = ["document_indexer"]
omit = ["tests/*", "__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
