[project]
name = "document-lister"
version = "0.1.0"
description = "Scans the local document library and enqueues PDFs for indexing via RabbitMQ."
requires-python = ">=3.12"
dependencies = [
    "pika==1.3.2",
    "python-json-logger>=4.0.0",
    "redis==4.6.0",
    "retry==0.9.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
