[project]
name = "document-lister"
version = "0.1.0"
description = "Scans the local document library and enqueues PDFs for indexing via RabbitMQ."
requires-python = ">=3.12"
dependencies = [
    "pika==1.3.2",
    "python-json-logger>=4.0.0",
    "redis==7.4.0",
    "retry==0.9.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=document_lister --cov-report=term-missing --cov-report=html -ra"

[tool.coverage.run]
source = ["document_lister"]
omit = ["tests/*", "__pycache__/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == [\\\"']__main__[\\\"']:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
