[project]
name = "embeddings-server"
version = "0.1.0"
description = "Sentence-transformer embeddings service for Aithena"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.4,<6",
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.42,<1",
]

[project.optional-dependencies]
openvino = [
    "optimum-intel",
    "openvino",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "httpx>=0.27",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
