[project]
name = "embeddings-server"
version = "0.1.0"
description = "Sentence-transformer embeddings service for Aithena"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.4,<6",
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.42,<1",
]

[project.optional-dependencies]
openvino = [
"sentence-transformers[openvino]>=3.4,<6",
    "openvino",
    "optimum-intel",
    "intel-extension-for-pytorch",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.1",
    "httpx>=0.27",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
