[project]
name = "solr-search"
version = "0.1.0"
description = "Solr-backed FastAPI search service for aithena"
requires-python = ">=3.12"
dependencies = [
    "aithena-common",
    "fastapi[all]>=0.135.3,<1",
    "uvicorn[standard]>=0.44.0,<1",
    "requests==2.33.1",
    "redis==7.4.0",
    "pika>=1.3.2",
    "python-multipart>=0.0.27",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.8.0",
    "python-json-logger>=4.0.0",
]

[tool.uv.sources]
aithena-common = { path = "../aithena-common" }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "--cov=search_service --cov=main --cov=auth --cov=admin_auth --cov=config --cov=metrics --cov=correlation --cov=logging_config --cov=reset_password --cov=password_policy --cov=collections_service --cov=collections_models --cov=backup_service --cov=utils --cov=solr_compat --cov=rerank_service --cov-report=term-missing --cov-report=html -ra"

[tool.coverage.run]
source = ["search_service", "main", "auth", "admin_auth", "config", "metrics", "correlation", "logging_config", "reset_password", "password_policy", "collections_service", "collections_models", "backup_service", "utils", "solr_compat", "rerank_service"]
omit = ["tests/*", "__pycache__/*"]

[tool.coverage.report]
fail_under = 88
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
